Closed
Bug 1385650
Opened 7 years ago
Closed 7 years ago
Title attributes on convertible elements get discarded from HTML compositions when sending (Auto-Downgrade of Delivery Format: Auto-Detect)
Categories
(MailNews Core :: Composition, defect)
MailNews Core
Composition
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 56.0
People
(Reporter: thomas8, Assigned: thomas8)
References
(Blocks 1 open bug)
Details
(4 keywords, Whiteboard: [ux-wysiwyg])
User Story
With TB default settings, many explicit title attributes created with Editor's "Advanced Edit" or "Insert HTML" on simple tags in an otherwise simple HTML message are unexpectedly discarded before sending.
Attachments
(1 file)
1.77 KB,
patch
|
aceman
:
review+
Paenglab
:
ui-review+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1384361 +++
STR:
1) Compose HTML message to recipient who "prefers to receive messsages formatted as: Unknown (default)". Set "when one or more recipients can't have HTML" to anything which is NOT "just send plaintext" (default: Plaintext AND HTML), to indicate your preference for HTML delivery format.
2) Use Editor's "Advanced Edit" (e.g. with links) or "Insert HTML" functionality to add title attributes on simple convertible elements.
In HTML 5, title attributes are allowed on any tag(!). E.g.:
<a title="The advocates of an Internet for people, not profit" href="http://www.mozilla.com">
<p title="Free Web tutorials">W3Schools.com</p>
<body title="© 2017 Mozilla Foundation">
(do not use any other formatting)
3) Send (to outbox for testing purposes, Ctrl+Shift+Enter)
4) Look at sent message source
Actual result
* All of the above explicit title attributes have been silently dumped by Auto-Detect's Auto-Degrade algorithm.
Expected result:
* We must never dump explicit formatting after the fact, with default HTML settings
- ux-wysiwyg
- ux-control
- ux-error-prevention
- ux-consistency
Assignee | ||
Comment 1•7 years ago
|
||
Let's fix this!
Attachment #8891709 -
Flags: ui-review?(richard.marti)
Attachment #8891709 -
Flags: review?(acelists)
Comment 2•7 years ago
|
||
Comment on attachment 8891709 [details] [diff] [review]
1385650 - make 'title' attribute convertible-no.patch
Review of attachment 8891709 [details] [diff] [review]:
-----------------------------------------------------------------
Can't you only move the element.LowerCaseEqualsLiteral("title") from the convertible block to the non-convertible block like you've done in bug 1385636?
Comment 3•7 years ago
|
||
No, there is a title element https://developer.mozilla.org/en/docs/Web/HTML/Element/title and a title attribute of a link/anchor. This patch is about the latter. I think the patch is OK, but I'll let the requested reviewer approve it.
Comment 4•7 years ago
|
||
Comment on attachment 8891709 [details] [diff] [review]
1385650 - make 'title' attribute convertible-no.patch
If somebody uses the title attribute for important information then we can say this would be data-loss by design because the receptor doesn't know automatically there is some additional info by hovering an element. ;)
With the patch we are not guilty party if this happens.
Attachment #8891709 -
Flags: ui-review?(richard.marti) → ui-review+
Attachment #8891709 -
Flags: review?(acelists) → review+
Assignee | ||
Comment 5•7 years ago
|
||
(In reply to Richard Marti (:Paenglab) from comment #4)
> Comment on attachment 8891709 [details] [diff] [review]
> 1385650 - make 'title' attribute convertible-no.patch
>
> If somebody uses the title attribute for important information then we can
> say this would be data-loss by design because the receptor doesn't know
> automatically there is some additional info by hovering an element. ;)
True... ;)
> With the patch we are not guilty party if this happens.
:))
Keywords: checkin-needed
Assignee | ||
Updated•7 years ago
|
Status: NEW → ASSIGNED
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/b3f58fc9335a
Make title attributes not convertible to plaintext. r=aceman
Updated•7 years ago
|
Target Milestone: --- → Thunderbird 56.0
You need to log in
before you can comment on or make changes to this bug.
Description
•