Bug 1385650 - Make title attributes not convertible to plaintext. r=aceman